crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__error_endless.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"hello"
---
String(
    EndlessSingle,
    1,
    2,
)
