crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__multi_line.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"\"\"multi-line\"\"\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Str(
        "multi-line",
    ),
}
