crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__simple.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"hello\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Str(
        "hello",
    ),
}
