crates/nash-parse/src/expression/snapshots/nash_parse__expression__string__tests__with_escape.snap
---
source: crates/nash-parse/src/expression/string.rs
description: "Code:\n\n\"hello\\nworld\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Str(
        "hello\nworld",
    ),
}
